--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.7",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -17,10 +18,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@tailwindcss/typography": "^0.5.10",
-    "@supabase/ssr": "0.1.0",
-    "@supabase/supabase-js": "2.39.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "convex": "^1.9.0",
+    "date-fns": "^3.3.1",
     "framer-motion": "^11.0.5",
     "lucide-react": "^0.330.0",
     "markdown-to-jsx": "^7.4.1",
